  * Set passwd/auto-login=true rather than implementing auto-login ourselves
    (LP: #347900).

  [ Evan Dandrea ]
  * Update the timezone_map to match changes in ubiquity (more accurate
    city placement).
  * Merge in the new KDE time zone map from ubiquity.  Thanks Roman
    Shtylman.

  [ Mario Limonciello ]
  * Change the number of columns in the language icon view to 5.  This 
    should make it fit in 1024x600 or at least very close. (LP: #347350)

 -- Colin Watson <cjwatson@ubuntu.com>  Wed, 18 Mar 2009 14:32:32 +0000

oem-config (1.54.9) jaunty; urgency=low

  [ Evan Dandrea ]
  * Add missing errno import.
  * Merge in the new timezone widget from ubiquity (LP: #335557).
  * Fix 'resize if too big for screen' logic (LP: #341758).  Thanks Michael
    Terry!

  [ Colin Watson ]
  * GTK frontend:
    - Full-screen the window when --only is used - i.e. more or less always,
      except for testing. The extra screen real estate makes the timezone
      map, among other widgets, easier to use. (Ported from Evan Dandrea's
      similar change to Ubiquity; the KDE frontend needed no change as in
      oem-config it's always full-screen.)
    - Use stock preferences-system icon (thanks, Michael Terry;
      LP: #341770).
  * Update translations from Launchpad.

 -- Colin Watson <cjwatson@ubuntu.com>  Tue, 17 Mar 2009 01:22:18 +0000

oem-config (1.54.8) jaunty; urgency=low

  * debconf frontend:
    - Fix typo: "oem-config/text/task_heading_label" should have been
      "oem-config/text/tasks_heading_label".
    - Explicitly stop our debconf frontend just before exiting, to avoid
      leaving a zombie if tasksel installs some package that starts a daemon
      that doesn't disconnect from fd 3.
  * Remove obsolete local copy of DebconfCommunicator. We just rely on a new
    enough debconf now.
  * Automatic update of included source packages: console-setup 1.28ubuntu6.

 -- Colin Watson <cjwatson@ubuntu.com>  Wed, 04 Mar 2009 18:26:26 +0000
